@@ -6,6 +6,7 @@ Version 1.1rc to be released
 ----------------------------
 - Enh: Added CSS class for links generated by CSort to differentiate sorting directions (Qiang)
 - Enh: Added CComponent::evaluateExpression() (Qiang)
+- Enh: Added CPagination::offset and CPagination::limit (Qiang)
 - Chg: CSort.multiSort is changed to sort by single attribute by default (Qiang)
 - New: Added CDataProvider and CActiveDataProvider (Qiang)
 
